add base messages skeleton

--- a/styles/vars.scss
+++ b/styles/vars.scss
@@ -36,10 +36,13 @@ $color-complimentary: #2e7d32;
 $color-black: #211d1e;
 $color-white: #fff;
 $color-dark: #292f4c;
+$color-darker: #181c2f;
 $color-dark-semi-transparent-heavy: rgba(41, 47, 76, 0.8);
 $color-complimentary-transparent-heavy: rgba(46, 125, 50, 0.8);
 $color-dark-semi-transparent: rgba(41, 47, 76, 0.6);
 $color-dark-gray: #d1d1d6;
+$color-gray-light: #f1f1f1;
+$color-gray-medium: #f1eded;
 $color-darker-gray: #aaa;
 $color-gray: #c7c7cc;
 $color-light-gray: #e5e5ea;
@@ -67,6 +70,7 @@ $box-shadow-drawer: -6px 3px 9px rgba(0, 0, 0, 0.15);
 $shadow-soft: 0 2px 4px 0 $color-darker-gray;
 $box-shadow-search: 0 1px 3px 1px $color-complimentary;
 
+$border-radius-big: 12px;
 $border-radius-input: 8px;
 $border-radius-medium: 6px;
 $border-radius-small: 4px;
