--- a/components/Image/ImageCarousel.module.scss
+++ b/components/Image/ImageCarousel.module.scss
@@ -19,12 +19,12 @@
     }
   }
 
-  > img {
+  img {
     width: 100%;
     height: 100%;
     object-fit: cover;
   }
-  > span {
+  span {
     width: 100%;
     height: 100%;
   }
