--- a/pages/messages/components/ChatList.module.scss
+++ b/pages/messages/components/ChatList.module.scss
@@ -57,7 +57,7 @@
         }
         margin-top: spacing(2);
         span {
-          color: $color-gray;
+          color: $color-darker-gray;
           letter-spacing: 0.02em;
         }
       }
