--- a/pages/messages/components/ChatAvatar.module.scss
+++ b/pages/messages/components/ChatAvatar.module.scss
@@ -3,6 +3,12 @@
 .container {
   display: flex;
   align-items: center;
+  > span {
+    white-space: nowrap;
+  }
+  a {
+    margin: 0;
+  }
   .title {
     display: flex;
     flex-direction: column;
@@ -15,10 +21,12 @@
     }
     span {
       font-weight: $font-weight-bold;
-      text-overflow: ellipsis;
-      overflow: hidden;
-      white-space: nowrap;
-      max-width: 70%;
     }
+  }
+  .wrapText {
+    max-width: 70%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
   }
 }
