--- a/pages/messages/components/ChatList.module.scss
+++ b/pages/messages/components/ChatList.module.scss
@@ -45,6 +45,10 @@
           svg {
             color: $color-white;
           }
+          span {
+            color: $color-primary;
+            text-decoration: underline;
+          }
         }
       }
 
