--- a/pages/messages/components/ChatView.module.scss
+++ b/pages/messages/components/ChatView.module.scss
@@ -1,16 +1,33 @@
 @import 'vars.scss';
 
 .container {
+  display: grid;
+  grid-template-rows: 77px calc(100vh - 190px) 44px; // 136px
+  &.inputLarge {
+    grid-template-rows: 77px calc(100vh - 220px) 44px; // 136px
+  }
   .header {
+    .backButton {
+      svg {
+        color: $color-complimentary;
+      }
+    }
     padding: spacing(2) 0;
     border-bottom: 1px solid $color-darker-gray;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    .backButton {
-      svg {
-        color: $color-dark;
-      }
+    @media (min-width: $tablet) {
+      padding: spacing(2) spacing(1.5);
+    }
+    > div:first-child {
+      display: grid;
+      grid-template-columns: 28px 1fr;
+      grid-gap: spacing(1);
+      width: 100%;
+    }
+    > div:last-child {
+      display: flex;
     }
   }
 }
