--- a/pages/messages/components/ChatInput.module.scss
+++ b/pages/messages/components/ChatInput.module.scss
@@ -7,7 +7,7 @@
   align-items: center;
   grid-template-columns: 1fr 32px;
   border-top: 1px solid $color-darker-gray;
-  padding: spacing(1) 0;
+  padding-top: spacing(1);
   grid-gap: spacing(1);
   .input {
     margin: 0;
