add chats fetch

--- a/pages/messages/components/ChatList.module.scss
+++ b/pages/messages/components/ChatList.module.scss
@@ -1,5 +1,12 @@
 @import 'vars.scss';
 
+.loader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: spacing(1) 0;
+}
+
 .container {
   background: $color-gray-light;
   overflow: auto;
