--- a/pages/messages/components/MessagesList.module.scss
+++ b/pages/messages/components/MessagesList.module.scss
@@ -10,16 +10,21 @@
     flex-direction: column;
     margin: 0 auto 1rem;
     padding: 0.5rem 1.5rem;
-    > span {
+    li {
+      display: flex;
+      flex-direction: column;
+    }
+    li > span {
       margin-bottom: spacing(1.5);
       color: $color-darker-gray;
       text-align: right;
+      font-size: $font-size-m;
       &.messageOther {
         text-align: left;
       }
     }
-    li {
-      border-radius: 1.15rem;
+    li > div {
+      border-radius: $border-radius-input;
       line-height: 1.25;
       max-width: 75%;
       padding: 0.5rem 0.875rem;
@@ -28,7 +33,7 @@
       align-self: flex-end;
       background-color: $color-primary;
       color: #fff;
-      margin-bottom: spacing(2.5);
+      margin-bottom: spacing(0.5);
       font-family: $font-family-secondary;
       font-size: $font-size-span;
       line-height: $line-height-span;
@@ -38,22 +43,6 @@
         background-color: $color-white;
         align-self: flex-start;
         color: $color-dark;
-        &::before {
-          display: none;
-        }
-      }
-
-      &::before {
-        content: '';
-        width: 0px;
-        height: 0px;
-        position: absolute;
-        border-left: 10px solid transparent;
-        border-right: 10px solid $color-primary;
-        border-top: 10px solid $color-primary;
-        border-bottom: 10px solid transparent;
-        right: 19px;
-        bottom: -19px;
       }
     }
   }
