--- a/pages/messages/components/ChatList.module.scss
+++ b/pages/messages/components/ChatList.module.scss
@@ -32,7 +32,7 @@
       background: $color-white;
       width: 100%;
       height: 150px;
-      overflow: auto;
+      overflow: hidden;
       position: relative;
       border-radius: $border-radius-medium;
       border-left: 4px solid transparent;
