--- a/pages/messages/components/ChatList.module.scss
+++ b/pages/messages/components/ChatList.module.scss
@@ -22,7 +22,9 @@
     display: grid;
     grid-auto-rows: minmax(150px, auto);
     grid-gap: spacing(2);
-    a {
+    li > a {
+      display: flex;
+      flex-direction: column;
       width: 100%;
       height: 100%;
     }
@@ -54,7 +56,8 @@
         position: absolute;
         font-size: $font-size-m;
         right: 0;
-        transform: translate(spacing(-3), 0);
+        bottom: 0;
+        transform: translate(spacing(-3), spacing(-3));
         @include for-safari-only {
           width: 22px;
         }
