--- a/components/Input/Select.module.scss
+++ b/components/Input/Select.module.scss
@@ -12,6 +12,20 @@
   }
 }
 
+.searchInput {
+  position: absolute;
+  left: spacing(1.5);
+  overflow-y: hidden;
+  overflow-x: auto;
+  width: calc(100% - 48px);
+  &::placeholder {
+    white-space: nowrap;
+    color: $color-gray;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
+
 .container {
   display: inline-flex;
   flex-direction: column;
@@ -27,7 +41,7 @@
   border: $border-thick-light-gray;
   border-radius: $border-radius-input;
   padding: spacing(1.5) spacing(6) spacing(1.5) spacing(1.5);
-  min-height: 44px;
+  min-height: 48px;
   min-width: 120px;
   position: relative;
   transition: $transition;
