--- a/components/VehicleOfTheDay/VehicleOfTheDay.module.scss
+++ b/components/VehicleOfTheDay/VehicleOfTheDay.module.scss
@@ -125,6 +125,14 @@
   }
 }
 
+.restContent {
+  height: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-top: auto;
+}
+
 .vehicleDetails {
   display: grid;
   grid-template-columns: 50% 50%;
@@ -143,7 +151,7 @@
     font-size: $font-size-span !important;
   }
   @media (max-width: $tablet) {
-    max-height: 118px;
+    // max-height: 118px;
     overflow: auto;
   }
   span {
