add socials, fix heroku

--- a/components/AuthForm/AuthForm.module.scss
+++ b/components/AuthForm/AuthForm.module.scss
@@ -34,12 +34,6 @@
   margin: spacing(2) 0;
 }
 
-.google {
+.social {
   margin: spacing(2) 0;
-  span {
-    color: $color-white;
-    font-size: $font-size-p;
-    line-height: $line-height-p;
-    font-family: $font-family;
-  }
 }
