--- a/components/AuthForm/AuthForm.module.scss
+++ b/components/AuthForm/AuthForm.module.scss
@@ -1,5 +1,16 @@
 @import 'vars.scss';
 
+.disclaimer {
+  margin-bottom: spacing(3);
+  border: 1px solid $color-red;
+  padding: spacing(2);
+  text-align: center;
+  border-radius: $border-radius-small;
+  span {
+    color: $color-red;
+  }
+}
+
 .container {
   background: $color-white;
   padding: spacing(2);
