handle message throttles

--- a/components/Vehicle/VehicleDetail.module.scss
+++ b/components/Vehicle/VehicleDetail.module.scss
@@ -15,9 +15,15 @@
   }
 }
 
+.mobile {
+  display: flex;
+  @media (min-width: $tablet) {
+    display: none;
+  }
+}
+
 .detail {
   display: flex;
-  align-items: center;
   span {
     text-align: left;
     white-space: nowrap;
