--- a/pages/profile/profile.module.scss
+++ b/pages/profile/profile.module.scss
@@ -86,7 +86,7 @@
       text-align: center;
     }
     @media (min-width: $small) {
-      h1 {
+      h1, h6 {
         text-align: left;
       }
     }
