--- a/components/Cards/VehicleCard.module.scss
+++ b/components/Cards/VehicleCard.module.scss
@@ -90,9 +90,9 @@
       // grid-template-rows: repeat(auto-fill, calc(50% - 4px));
       grid-gap: spacing(0.5);
       padding-top: spacing(0.5);
-      > div:last-child {
-        grid-column: 1/3;
-      }
+      // > div:last-child {
+      //   grid-column: 1/3;
+      // }
       > div:nth-child(even) {
         justify-self: flex-end;
       }
