--- a/components/Navigation/NavigationDropdown.module.scss
+++ b/components/Navigation/NavigationDropdown.module.scss
@@ -4,11 +4,29 @@
   position: relative;
 }
 
+@keyframes appear {
+	0% {
+		transform: scale(0) translate(-100%, 100%);
+		opacity: 0;
+		visibility: visible;
+	}
+	80% {
+		transform: scale(1.2) translate(-100%, 100%);
+	}
+	100% {
+		transform: scale(1) translate(-100%, 100%);
+		opacity: 1;
+	}
+}
+
+
 .drawer {
   position: absolute;
   bottom: spacing(-2);
   left: 100%;
   transform: translate(-100%, 100%);
+  animation: appear .6s ease-in-out;
+  animation-fill-mode: forwards;
   background: $color-dark;
   padding: spacing(2) 0;
   border-radius: $border-radius-input;
